FlightPath 5.x Changelog
========================

2016-03-20
  Fixed bug where permissions were not acting correctly in certain circumstances for viewing past advising sessions.


2016-03-17
  Added check on copy degree form to prevent accidental overwriting of existing degrees.
  

2016-03-14
  Added concept of min/max track selections to degrees.  Now, the user will be stopped if they select a number of tracks
  outside of the allowed range.
  
 
2016-03-08
  Added new permission checks to advise.module, and new permission-- limiting ability of user to only view their 
  specified advisee's advising sessions.  Needed to make that change for something to do with the student_files module.
   

2016-03-07
  Fixed bug where current draft catalog year wasn't being read correctly in _Course->load_descriptive_data()
  
  Fixed oversight where files input element didn't render attributes array, also added multiple=TRUE for files, too.
  

2016-03-02
  Made it to where if a group is worth more than 200 hours, its hour counts do not show in the group select row,
  or in the popup.
  
  
2016-03-01
  Fixed bug where courses were not reflecting the correct group they were assigned, in a multi-degree scenario.
  

2016-02-29
  Fixed bug where on install, the admin password wasn't set correctly.


2016-02-23
  Fixed issue with Course Search where faculty_id wasn't being saved as CWID, and where
  only first 20 rotation schedules were being returned instead of most recent 20.
  

2016-02-19
  Fixed bug in Copy Degree form submission, related to switch to PDO support.
  
  Fixed bug where min hours for a group weren't making it obtain the correct CSS class.
  

2016-02-18
  Fixed stray mysql_insert_id() command in _FlightPath.php.  Changed to db_insert_id().
  
  Made it to where if you skipped semesters on the degrees page, it will still show the blank
  boxes, at least before where you skipped.
  