@@ -1,6 +1,10 @@
 FlightPath 5.x Changelog
 ========================
 
+2016-03-27
+  Worked on What If selections screen, to work with new degree track selection configurations.
+  
+
 2016-03-20
   Fixed bug where permissions were not acting correctly in certain circumstances for viewing past advising sessions.
 
